# sigmod-2018

./: .gitignore  CMakeLists.txt  LICENSE  README  bench.sh  compile.sh  package.sh  run.sh  todo.txt
src/: aggregator.cpp  aggregator.h  bloom-filter.h  database.cpp  database.h  executor.cpp  executor.h  hash-table.h  io.cpp  io.h  main.cpp  main_win.cpp  query.cpp  query.h  settings.h  settings_lin.h  settings_win.h  stats.cpp  stats.h  timer.cpp  timer.h  util.h
src/aggregation/: aggregate.cpp  aggregate.h  aggregateAbstract.h  aggregateSort.cpp  aggregateSort.h  aggregated-iterator.cpp  aggregated-iterator.h  aggregator.cpp  aggregator.h  compute.cpp  compute.h  indexed-aggregated-iterator.cpp  indexed-aggregated-iterator.h
src/common/: cCommon.cpp  cCommon.h  cTimer.cpp  cTimer.h  cTimer_lnx.cpp  cTimer_lnx.h  cTimer_win.cpp  cTimer_win.h
src/emit/: filter-compiler.cpp  filter-compiler.h
src/foreign-key/: foreign-key-checker.cpp  foreign-key-checker.h
src/index/: aggregate-index.cpp  aggregate-index.h  column-index.cpp  column-index.h  hash-index-ext.cpp  hash-index-ext.h  hash-index.cpp  hash-index.h  index-builder.cpp  index-builder.h  index-thread-pool.cpp  index-thread-pool.h  index.cpp  index.h  primary-index.cpp  primary-index.h  sort-index.cpp  sort-index.h  sort.h
src/join/: hash-joiner.cpp  hash-joiner.h  index-joiner.cpp  index-joiner.h  joiner.cpp  joiner.h  merge-sort-joiner.cpp  merge-sort-joiner.h  nested-joiner.cpp  nested-joiner.h  self-join.cpp  self-join.h
src/relation/: column-relation.cpp  column-relation.h  filter-iterator.cpp  filter-iterator.h  filter-view.cpp  filter-view.h  hash-filter-iterator.cpp  hash-filter-iterator.h  index-iterator.h  iterator.cpp  iterator.h  maxdiff_histogram.cpp  maxdiff_histogram.h  primary-index-iterator.cpp  primary-index-iterator.h  row-relation.cpp  row-relation.h  sort-filter-iterator.cpp  sort-filter-iterator.h  sort-index-iterator.cpp  sort-index-iterator.h  view.h  wrapper-iterator.h
src/rewrite/: rewrite.cpp  rewrite.h
src/test/: main.cpp  mikrobenchmark.cpp
vs_solution/: sigmod_2018.sln
vs_solution/mikrobenchmark/: sigmod_2018.vcxproj  sigmod_2018.vcxproj.filters
vs_solution/sigmod_2018/: sigmod_2018.vcxproj  sigmod_2018.vcxproj.filters
vs_solution/workload_run/: sigmod_2018.vcxproj
workloads/small/: small.init
